fixed alignment and padding

--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ padding:0 0 0 15px
   border-radius: 6px;
 }
 
-.contenttimeline li {
+.contenttimeline small {
   color:#74808a;
 }
 
@@ -255,19 +255,20 @@ padding:0 0 0 15px
 @media screen and (max-width: 600px) {
 /* Place the timelime to the left */
   .timeline::after {
-    left: 31px;
+    left: 10px;
   }
 
 /* Full-width containers */
   .containertimeline {
     width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
+    padding-left: 40px;
+    padding-right: 0px;
   }
 
 /* Make sure that all arrows are pointing leftwards */
   .containertimeline::before {
-    left: 60px;
+    top: 17px;
+    left: 30px;
     border: medium solid white;
     border-width: 10px 10px 10px 0;
     border-color: transparent white transparent transparent;
@@ -275,7 +276,7 @@ padding:0 0 0 15px
 
 /* Make sure all circles are at the same spot */
   .left::after, .right::after {
-    left: 18px;
+    left: -2px;
   }
 
 /* Make all right containers behave like the left ones */
